<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gold"
    android:clickable="true">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dip"
        android:contentDescription="TODO"
        app:srcCompat="@mipmap/dayah" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="3dp"
        android:text="@string/gp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="13dp"
        android:layout_marginRight="16dip"
        android:text="@string/link"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

</RelativeLayout>
